# http-srv

./: Cargo.toml
root/: 404.html  foo.html  index.html
root/foo/bar/: baz.html  index.html
src/: main.rs  network.rs  request_handler.rs  request_parser.rs  response.rs
