[package]
name = "srv"
version = "0.1.0"
authors = ["biglizards"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.1.1"
serde_json = "1.0.57"
reqwest = { version = "0.10", features = ["blocking", "json"] }